--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -94,7 +94,7 @@
 @article{bechtel2017interests,
   title={{Interests, Norms and Support for the Provision of Global Public Goods: The Case of Climate Co-Operation}},
   author={Bechtel, Michael M and Genovese, Federica and Scheve, Kenneth F},
-  journal={British journal of political science},
+  journal={British Journal of Political Science},
   pages={1--23},
   year={2017},
   publisher={Cambridge University Press}
@@ -103,7 +103,7 @@
 @article{beiser2019commitment,
   title={{Commitment Failures are Unlikely to Undermine Public Support for the Paris Agreement}},
   author={Beiser-McGrath, Liam F and Bernauer, Thomas},
-  journal={Nature climate change},
+  journal={Nature Climate Change},
   volume={9},
   number={3},
   pages={248},
@@ -916,5 +916,135 @@ year = {2019}
   author={Jahn, Detlef},
   year={2016},
   publisher={Cambridge: Cambridge University Press}
+}
+
+@article{anderegg2010expert,
+  title={{Expert Credibility in Climate Change}},
+  author={Anderegg, William RL and Prall, James W and Harold, Jacob and Schneider, Stephen H},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={107},
+  number={27},
+  pages={12107--12109},
+  year={2010},
+  publisher={National Acad Sciences}
+}
+
+@article{victor2017prove,
+  title={{Prove Paris Was More than Paper Promises}},
+  author={Victor, David G and Akimoto, Keigo and Kaya, Yoichi and Yamaguchi, Mitsutsune and Cullenward, Danny and Hepburn, Cameron},
+  journal={Nature News},
+  volume={548},
+  number={7665},
+  pages={25},
+  year={2017}
+}
+
+@article{rosen2015wrong,
+  title={{The Wrong Solution at the Right Time: The Failure of the Kyoto Protocol on Climate Change}},
+  author={Rosen, Amanda M},
+  journal={Politics \& Policy},
+  volume={43},
+  number={1},
+  pages={30--58},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{rogelj2010copenhagen,
+  title={{Copenhagen Accord Pledges Are Paltry}},
+  author={Rogelj, Joeri and Nabel, Julia and Chen, Claudine and Hare, William and Markmann, Kathleen and Meinshausen, Malte and Schaeffer, Michiel and Macey, Kirsten and H{\"o}hne, Niklas},
+  journal={Nature},
+  volume={464},
+  number={7292},
+  pages={1126},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{winning2019nationally,
+  title={{Nationally Determined Contributions under the Paris Agreement and the Costs of Delayed Action}},
+  author={Winning, Matthew and Price, James and Ekins, Paul and Pye, Steve and Glynn, James and Watson, Jim and McGlade, Christophe},
+  journal={Climate Policy},
+  pages={1--12},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{ayling2017non,
+  title={{Non-state Governance and Climate Policy: The Fossil Fuel Divestment Movement}},
+  author={Ayling, Julie and Gunningham, Neil},
+  journal={Climate Policy},
+  volume={17},
+  number={2},
+  pages={131--149},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{andonova2009transnational,
+  title={{Transnational Climate Governance}},
+  author={Andonova, Liliana B and Betsill, Michele M and Bulkeley, Harriet},
+  journal={Global environmental politics},
+  volume={9},
+  number={2},
+  pages={52--73},
+  year={2009},
+  publisher={MIT Press}
+}
+
+@book{bulkeley2014transnational,
+  title={{Transnational Climate Change Governance}},
+  author={Bulkeley, Harriet and Andonova, Liliana B and Betsill, Michele M and Compagnon, Daniel and Hale, Thomas and Hoffmann, Matthew J and Newell, Peter and Paterson, Matthew and VanDeveer, Stacy D and Roger, Charles},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+
+@article{rochedo2018threat,
+  title={{The Threat of Political Bargaining to Climate Mitigation in Brazil}},
+  author={Rochedo, Pedro RR and Soares-Filho, Britaldo and Schaeffer, Roberto and Viola, Eduardo and Szklo, Alexandre and Lucena, Andr{\'e} FP and Koberle, Alexandre and Davis, Juliana Leroy and Raj{\~a}o, Raoni and Rathmann, Regis},
+  journal={Nature Climate Change},
+  volume={8},
+  number={8},
+  pages={695},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{da2018bancada,
+  title={{A Bancada Ruralista e a Pol{\'\i}tica P{\'u}blica Ambiental Brasileira}},
+  author={Lucchese, Giovani da Silva and Felipe Esteves Olivetski and Vicenci Fernandes and Sandra Beatriz},
+  journal={Observatorio de la Econom{\'\i}a Latinoamericana},
+  year={2018},
+  number={1},
+  pages={1--12}
+}
+
+@article{simionatto2012dominantes,
+  title={{Como os Dominantes Dominam: O Caso da Bancada Ruralista}},
+  author={Simionatto, Ivete and Costa, Carolina Rodrigues},
+  journal={Temporalis},
+  volume={12},
+  number={24},
+  pages={215--237},
+  year={2012}
+}
+
+@misc{busch2015developing,
+ author = {Jonah Busch},
+ editor = {{Center for Global Development}},
+ title = {{Climate Change and Development in Three Charts}},
+ howpublished = {\href{https://www.cgdev.org/blog/climate-change-and-development-three-charts}{\texttt{https://www.cgdev.org/blog/climate-change-and-development-three-charts}}. Access: July 2019},
+ year = {2015},
+}
+
+@article{parthan2010lessons,
+  title={{Lessons for Low-Carbon Energy Transition: Experience from the Renewable Energy and Energy Efficiency Partnership (REEEP)}},
+  author={Parthan, Binu and Osterkorn, Marianne and Kennedy, Matthew and Bazilian, Morgan and Monga, Pradeep},
+  journal={Energy for Sustainable Development},
+  volume={14},
+  number={2},
+  pages={83--93},
+  year={2010},
+  publisher={Elsevier}
 }
 
